fixed credential panel display issue on mobile

--- a/src/Components/Credentials/credentials.css
+++ b/src/Components/Credentials/credentials.css
@@ -5,18 +5,45 @@
   letter-spacing: 2px;
   font-weight: 500;
   transform: rotate(-90deg);
-  position: relative;
-  right: 11em;
-  top: 15em;
+  position: absolute;
+  right: -7.5em;
+  top: 80%;
 }
+
 .reset-btn {
   border: hidden !important;
   background: transparent !important;
   box-shadow: none;
+  left: 0;
 }
-.user-info p {
-  margin-bottom: 1px !important;
+
+.credentials p {
+  margin-bottom: 0.5px !important;
 }
+.user-info::after {
+  content: " ";
+  display: block;
+  border-bottom: 2px dotted #000;
+  width: 30%;
+  margin-bottom: 15%;
+  margin: auto;
+}
+.credentials h5 {
+  font-weight: 700;
+  text-decoration: underline;
+}
+/* .credentials-container {
+  height: 500px !important;
+  background: blue !important;
+  transition: all 2s ease !important;
+} */
+
+/* .users{
+
+} */
+/* .credentials-container {
+  overflow: hidden !important;
+} */
 /* .credentials-btn p {
   letter-spacing: 2px;
   padding: 0;
